fix: increase prose max-width
It makes commands hard to read, and looks pretty empty on wider monitors

--- a/resources/main.css
+++ b/resources/main.css
@@ -167,4 +167,8 @@
   article img:not(.no-spotlight) {
     @apply cursor-zoom-in;
   }
+
+  .prose {
+    max-width: 90ch !important;
+  }
 }
